services/ele/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ele-frontend-gateway
  namespace: prod
spec:
  gatewayClassName: istio
  listeners:
    - name: prod
      hostname: "www.kaiandkai.com"
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ele-backend-gateway
  namespace: prod
spec:
  gatewayClassName: istio
  listeners:
    - name: prod
      hostname: "api.kaiandkai.com"
      port: 80
      protocol: HTTP
